# Planora

./: .dockerignore  .gitignore  FEATURES.MD  LICENSE  PROGRAM_SPECS.md  Program Specs.docx  README.md  SCHEDULE_SPECS.md  SPECS.md  Schedule Specs.docx  domain.py  engine_cli.py  exporter.py  generator.py  main.py  metaheuristics.py  pyproject.toml  requirements-dev.txt  requirements.txt  solver_cp_sat.py  timetable_target_case.docx  ui_desktop  ui_desktop.py
api/: actions.py  auth_helpers.py  http.py  rate_limit.py  schema.py  server.py  system_status.py
benchmarks/: __init__.py  corpus.py
connectors/: __init__.py  csv_connectors.py
core/: engine_cli.py  metaheuristics.py  solver_cp_sat.py
deploy/: .env.example  Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml  web.Dockerfile
docs/: ARCHITECTURE.md  PRODUCTION_AUTH_DEPLOYMENT.md  PRODUCTION_OPERATIONS.md  SOLVER_ARCHITECTURE.md  TESTING_GUIDE.md  USER_MANUAL.md  trademark_checklist.md
paper/: README.md  main.tex  refs.bib  results.jsonl  results_baseline_expanded.jsonl  results_ls_expanded.jsonl
product/: __init__.py  branding.py  compiler.py  flags.py  migrations.py  model.py  rules.py
scripts/: backup_planora.py  benchmark_scheduler_profiles.py  bootstrap_access.py  bootstrap_invite.py  build_uni_schedule_scenario.py  deploy_prod.sh  extract_pdf_schedule.py  freeze_release_artifacts.sh  jsonl_to_latex_ls_table.py  jsonl_to_latex_table.py  probe_target_engine.py  retention_planora.py  run_ci_checks.sh  run_experiment_batches.sh  run_experiments.py  score_schedule_preset.py  ss23_regression_guard.py
services/: __init__.py  application_service.py  approval_service.py  auth_service.py  branch_service.py  branding_service.py  calendar_sync_service.py  compare_service.py  contracts.py  database_service.py  (+23 more)
(+160 files in other folders)
