[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planora"
version = "1.0"
description = "Scheduler using OR-Tools CP-SAT with optional local search and a PyQt desktop UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "feel" }
]
dependencies = [
  "ortools==9.15.6755",
  "PyQt6==6.10.2",
  "python-docx==1.2.0",
  "PyJWT[crypto]==2.10.1",
  "argon2-cffi==25.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
scheduler-cli = "main:main"
scheduler-ui = "ui.app:main"
planora-api = "api.server:main"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
  "slow: slower tests run in the second CI phase",
  "ui: tests that exercise the desktop UI layer",
]
